k8s/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: comfyui
  labels:
    app: comfyui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"
      imagePullSecrets:
        - name: ghcr-io-secret
      containers:
        - name: comfyui
          image: ghcr.io/andreclaudino/comfyui-doker:latest-cuda12.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8188
              name: http
          resources:
            requests:
              nvidia.com/gpu: "1"
              memory: "16Gi"
              cpu: "4"
            limits:
              nvidia.com/gpu: "1"
              memory: "24Gi"
              cpu: "8"
          volumeMounts:
            - name: comfyui-pvc
              mountPath: /comfyui
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: comfyui-pvc
          persistentVolumeClaim:
            claimName: comfyui-pvc
